[gd_scene load_steps=5 format=3 uid="uid://5h63ep56w5tb"]

[ext_resource type="Script" path="res://scripts/user_interface.gd" id="1_jre43"]
[ext_resource type="Script" path="res://scripts/main_view.gd" id="2_7iq47"]
[ext_resource type="PackedScene" uid="uid://bcf1b6wq2o5pu" path="res://scenes/attributes_display.tscn" id="3_5af7c"]
[ext_resource type="Script" path="res://scripts/attribute_upgrades_view.gd" id="3_pnytv"]

[node name="UserInterface" type="TabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
script = ExtResource("1_jre43")

[node name="MainView" type="Control" parent="." node_paths=PackedStringArray("reputationlabel", "reputationvaluelabel", "karmalabel", "karmavaluelabel", "fitnesslabel", "fitnessvaluelabel", "wealthlabel", "wealthvaluelabel", "educationlabel", "educationvaluelabel", "wisdomlabel", "wisdomvaluelabel", "livebutton", "socializebutton", "worshipbutton", "exercisebutton", "workbutton", "studybutton", "meditatebutton", "activitytimer")]
layout_mode = 2
script = ExtResource("2_7iq47")
reputationlabel = NodePath("")
reputationvaluelabel = NodePath("")
karmalabel = NodePath("")
karmavaluelabel = NodePath("")
fitnesslabel = NodePath("")
fitnessvaluelabel = NodePath("")
wealthlabel = NodePath("")
wealthvaluelabel = NodePath("")
educationlabel = NodePath("")
educationvaluelabel = NodePath("")
wisdomlabel = NodePath("")
wisdomvaluelabel = NodePath("")
livebutton = NodePath("VBoxContainer/HBoxContainer/ActivitiesDisplay/LiveButton")
socializebutton = NodePath("VBoxContainer/HBoxContainer/ActivitiesDisplay/SocializeButton")
worshipbutton = NodePath("VBoxContainer/HBoxContainer/ActivitiesDisplay/WorshipButton")
exercisebutton = NodePath("VBoxContainer/HBoxContainer/ActivitiesDisplay/ExerciseButton")
workbutton = NodePath("VBoxContainer/HBoxContainer/ActivitiesDisplay/WorkButton")
studybutton = NodePath("VBoxContainer/HBoxContainer/ActivitiesDisplay/StudyButton")
meditatebutton = NodePath("VBoxContainer/HBoxContainer/ActivitiesDisplay/MeditateButton")
activitytimer = NodePath("ActivityTimer")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MainView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainView/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="AttributesDisplay" parent="MainView/VBoxContainer/HBoxContainer" instance=ExtResource("3_5af7c")]
layout_mode = 2

[node name="ActivitiesDisplay" type="Control" parent="MainView/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0

[node name="SocializeButton" type="Button" parent="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 80.0
offset_right = 50.0
offset_bottom = 120.0
grow_horizontal = 2
text = "Socialize"

[node name="MeditateButton" type="Button" parent="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 380.0
offset_right = 50.0
offset_bottom = 420.0
grow_horizontal = 2
text = "Meditate"

[node name="ExerciseButton" type="Button" parent="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 200.0
offset_right = 50.0
offset_bottom = 240.0
grow_horizontal = 2
text = "Exercise"

[node name="WorkButton" type="Button" parent="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 260.0
offset_right = 50.0
offset_bottom = 300.0
grow_horizontal = 2
text = "Work"

[node name="StudyButton" type="Button" parent="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 320.0
offset_right = 50.0
offset_bottom = 360.0
grow_horizontal = 2
text = "Study"

[node name="LiveButton" type="Button" parent="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Live"

[node name="WorshipButton" type="Button" parent="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 140.0
offset_right = 50.0
offset_bottom = 180.0
grow_horizontal = 2
text = "Worship"

[node name="NavigationDisplay" type="Control" parent="MainView/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="ResourcesDisplay" type="Control" parent="MainView/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 10

[node name="ActivityTimer" type="Timer" parent="MainView"]

[node name="AttributeUpgradesView" type="Control" parent="." node_paths=PackedStringArray("titlelabel")]
visible = false
layout_mode = 2
script = ExtResource("3_pnytv")
titlelabel = NodePath("HBoxContainer/TitleLabel")
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="AttributeUpgradesView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="AttributeUpgradesView/HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="AttributesDisplay" parent="AttributeUpgradesView/HBoxContainer/Control" instance=ExtResource("3_5af7c")]

[node name="TitleLabel" type="Label" parent="AttributeUpgradesView/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Attribute Upgrades"

[connection signal="pressed" from="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay/SocializeButton" to="MainView" method="_on_socialize_button_pressed"]
[connection signal="pressed" from="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay/MeditateButton" to="MainView" method="_on_meditate_button_pressed"]
[connection signal="pressed" from="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay/ExerciseButton" to="MainView" method="_on_exercise_button_pressed"]
[connection signal="pressed" from="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay/WorkButton" to="MainView" method="_on_work_button_pressed"]
[connection signal="pressed" from="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay/StudyButton" to="MainView" method="_on_study_button_pressed"]
[connection signal="pressed" from="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay/LiveButton" to="MainView" method="_on_live_button_pressed"]
[connection signal="pressed" from="MainView/VBoxContainer/HBoxContainer/ActivitiesDisplay/WorshipButton" to="MainView" method="_on_worship_button_pressed"]
[connection signal="timeout" from="MainView/ActivityTimer" to="MainView" method="_on_activity_timer_timeout"]
